--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementForm.html
@@ -11,15 +11,19 @@
     <title>编辑广告 - 广告机管理后台</title>
 </head>
 
+<!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+<!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="newEntityID" type="java.lang.Integer"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="advertisement" type="com.xmlan.machine.module.advertisement.entity.Advertisement"*/-->
 <!--/*@thymesVar id="machineList" type="java.util.List<com.xmlan.machine.module.advertisementMachine.entity.SimpleAdvertisementMachine>"*/-->
 <!--/*@thymesVar id="userList" type="java.util.List<com.xmlan.machine.module.user.entity.SimpleUser>"*/-->
+<!--/* </editor-fold> */-->
 
 <body>
-<header>
-    <nav style="background-color: #37474f;z-index: 1;">
+<header style="z-index: 1;">
+    <nav class="z-depth-2 blue-grey darken-4">
         <div class="nav-wrapper">
             <ul class="left">
                 <li style="height: 56px;">
@@ -43,10 +47,10 @@
                 <li class="active">
                     <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
@@ -65,24 +69,23 @@
     </nav>
 </header>
 
-<main>
+<main style="z-index: 0;">
+    <div class="page-title z-depth-1 blue-grey darken-2">
+        <div class="white-text">
+            <span class="flow-text">
+                <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
+                   onclick="history.go(-1);"><i class="material-icons white-text">arrow_back</i></a><span
+                    th:text="${advertisement.id==newEntityID?'新增广告':advertisement.name}"></span>
+            </span>
+        </div>
+    </div>
+    <br/>
     <div id="main-content" class="container">
-        <h5 class="title">
-            <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a><span
-                th:text="'&nbsp;|&nbsp;编辑广告——'+${advertisement.id==-2?'新增广告':advertisement.name}"></span>
-        </h5>
-        <ul>
-            <li class="divider"></li>
-        </ul>
-
         <form th:action="@{${adminPath}+'/advertisement/save/'+${advertisement.id}}" method="post">
-            <input id="id" name="id" th:value="${advertisement.id}" type="hidden" disabled="disabled" class="validate"
-                   required="required"/>
-            <input id="url" name="url" th:value="${advertisement.url}" type="hidden" disabled="disabled"
-                   class="validate"/>
-            <input id="userID" name="userID" th:value="${advertisement.userID}" type="hidden" disabled="disabled"
-                   class="validate" required="required" th:if="${loginUser.roleID!=1}"/>
+            <input id="id" name="id" th:value="${advertisement.id}" type="hidden" class="validate" required="required"/>
+            <input id="url" name="url" th:value="${advertisement.url}" type="hidden" class="validate"/>
+            <input id="userID-ro" name="userID" th:value="${advertisement.userID}" type="hidden" class="validate"
+                   required="required" th:if="${loginUser.roleID!=adminRoleID}"/>
 
             <div class="row">
                 <div class="input-field col s6 m6 l6">
@@ -118,7 +121,7 @@
                     <label for="machineID">所属广告机</label>
                 </div>
 
-                <div class="input-field col s12 m12 l12" th:if="${loginUser.roleID==1}">
+                <div class="input-field col s12 m12 l12" th:if="${loginUser.roleID==adminRoleID}">
                     <i class="material-icons prefix">account_circle</i>
                     <select id="userID" name="userID">
                         <option th:each="item:${userList}" th:value="*{item.id}" th:text="*{item.username}"
@@ -151,8 +154,7 @@
     </div>
 </main>
 
-<footer class="page-footer hide-on-med-and-down"
-        style="position: absolute; bottom: 0; left: 0;background-color: #37474f;">
+<footer class="page-footer hide-on-med-and-down blue-grey darken-4" style="z-index: 1;">
     <div class="footer-copyright">
         <div class="container right-align">
             © 2017 Copyright 珠海希梦电子科技有限公司
