--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
@@ -13,6 +13,7 @@
 
 <!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+<!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.advertisement.entity.Advertisement>"*/-->
 <!--/*@thymesVar id="machineList" type="java.util.List<com.xmlan.machine.module.advertisementMachine.entity.SimpleAdvertisementMachine>"*/-->
@@ -23,8 +24,8 @@
 <!--/* </editor-fold> */-->
 
 <body>
-<header>
-    <nav style="background-color: #37474f;z-index: 1;">
+<header style="z-index: 1;">
+    <nav class="z-depth-2 blue-grey darken-4">
         <div class="nav-wrapper">
             <ul class="left">
                 <li style="height: 56px;">
@@ -48,10 +49,10 @@
                 <li class="active">
                     <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
@@ -70,15 +71,16 @@
     </nav>
 </header>
 
-<main>
+<main style="z-index: 0;">
+    <div class="page-title z-depth-1 blue-grey darken-2">
+        <div class="white-text">
+            <span class="flow-text">
+                <a class="btn-flat"><i class="material-icons white-text">list</i></a>广告列表
+            </span>
+        </div>
+    </div>
+    <br/>
     <div id="main-content" class="container">
-        <!--/* <editor-fold desc="header"> */-->
-        <h5 class="title">广告列表</h5>
-        <ul>
-            <li class="divider"></li>
-        </ul>
-        <!--/* </editor-fold> */-->
-
         <!--/* <editor-fold desc="search box"> */-->
         <div id="search-box">
             <form th:action="@{${adminPath}+'/advertisement/list/1'}" method="post">
@@ -131,13 +133,12 @@
         </div>
         <!--/* </editor-fold> */-->
 
-        <!--/* <editor-fold desc="table main content"> */-->
         <table class="highlight responsive-table">
             <thead>
             <tr>
-                <th width="25%">名称</th>
-                <th width="10%">播放时间</th>
-                <th width="15%">加入时间</th>
+                <th>名称</th>
+                <th>播放时间</th>
+                <th>加入时间</th>
                 <th>所属机器</th>
                 <th class="hide-on-med-and-down" width="20%"></th>
                 <th class="hide-on-large-only"></th>
@@ -199,19 +200,15 @@
             </tr>
             </tbody>
         </table>
-        <!--/* </editor-fold> */-->
 
-        <!--/* <editor-fold desc="add button"> */-->
         <div id="fixed-add-btn" class="fixed-action-btn">
             <a class="btn-floating btn-large waves-effect waves-light blue"
                th:href="@{${adminPath}+'/advertisement/form'}">
                 <i class="large material-icons">add</i>
             </a>
         </div>
-        <!--/* </editor-fold> */-->
 
-        <!--/* <editor-fold desc="pagination"> */-->
-        <div class="center">
+        <div id="pagination-div" class="center">
             <ul class="pagination">
                 <li th:if="${!page.hasPreviousPage}" class="disabled">
                     <a href="#"><i class="material-icons">chevron_left</i></a>
@@ -241,7 +238,6 @@
                 </li>
             </ul>
         </div>
-        <!--/* </editor-fold> */-->
     </div>
 
     <!--/* <editor-fold desc="modal"> */-->
@@ -310,8 +306,7 @@
     <!--/* </editor-fold> */-->
 </main>
 
-<footer class="page-footer hide-on-med-and-down"
-        style="position: absolute; bottom: 0; left: 0;background-color: #37474f;">
+<footer class="page-footer hide-on-med-and-down blue-grey darken-4" style="z-index: 1;">
     <div class="footer-copyright">
         <div class="container right-align">
             © 2017 Copyright 珠海希梦电子科技有限公司
