--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -13,14 +13,16 @@
 
 <!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+<!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="newEntityID" type="java.lang.Integer"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="machine" type="com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine"*/-->
 <!--/*@thymesVar id="userList" type="java.util.List<com.xmlan.machine.module.user.entity.SimpleUser>"*/-->
 <!--/* </editor-fold> */-->
 
 <body>
-<header>
-    <nav style="background-color: #37474f;z-index: 1;">
+<header style="z-index: 1;">
+    <nav class="z-depth-2 blue-grey darken-4">
         <div class="nav-wrapper">
             <ul class="left">
                 <li style="height: 56px;">
@@ -44,10 +46,10 @@
                 <li>
                     <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
@@ -66,24 +68,23 @@
     </nav>
 </header>
 
-<main>
+<main style="z-index: 0;">
+    <div class="page-title z-depth-1 blue-grey darken-2">
+        <div class="white-text">
+            <span class="flow-text">
+                <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
+                   onclick="history.go(-1);"><i class="material-icons white-text">arrow_back</i></a><span
+                    th:text="${machine.id==newEntityID?'新增广告机':machine.name}"></span>
+            </span>
+        </div>
+    </div>
+    <br/>
     <div id="main-content" class="container">
-        <h5 class="title">
-            <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-               th:href="@{${adminPath}+'/advertisementMachine/list/1'}"><i class="material-icons">arrow_back</i></a>
-            <span th:text="'&nbsp;|&nbsp;编辑广告机——'+${machine.id==-2?'新增广告机':machine.name}"></span>
-        </h5>
-        <ul>
-            <li class="divider"></li>
-        </ul>
-
         <form th:action="@{${adminPath}+'/advertisementMachine/save/'+${machine.id}}" method="post">
-            <input id="id" name="id" type="hidden" disabled="disabled" class="validate" required="required"
-                   th:value="${machine.id}"/>
-            <input id="longitude" name="longitude" type="hidden" disabled="disabled" class="validate"
-                   th:value="${machine.longitude}"/>
-            <input id="latitude" name="latitude" type="hidden" disabled="disabled" class="validate"
-                   th:value="${machine.latitude}"/>
+            <input id="id" name="id" type="hidden" class="validate" required="required" th:value="${machine.id}"/>
+            <input id="longitude" name="longitude" type="hidden" class="validate" th:value="${machine.longitude}"/>
+            <input id="latitude" name="latitude" type="hidden" class="validate" th:value="${machine.latitude}"/>
+
             <div class="row">
                 <div class="input-field col s6 m6 l6">
                     <i class="material-icons prefix">create</i>
@@ -93,12 +94,17 @@
                 </div>
                 <div class="input-field col s6 m6 l6">
                     <i class="material-icons prefix">account_circle</i>
-                    <select id="userID" name="userID">
+                    <select id="userID-ro" name="userID" th:if="${loginUser.roleID!=adminRoleID}">
+                        <option th:each="item:${userList}" th:value="*{item.id}" th:text="*{item.username}"
+                                th:if="${item.id==machine.userID}" selected="selected"></option>
+                    </select>
+                    <label for="userID-ro" th:if="${loginUser.roleID!=adminRoleID}">所属用户</label>
+                    <select id="userID" name="userID" th:if="${loginUser.roleID==adminRoleID}">
                         <option th:each="item:${userList}" th:value="*{item.id}" th:text="*{item.username}"
                                 th:if="${item.id==machine.userID}" selected="selected"></option>
                         <option th:each="item:${userList}" th:value="*{item.id}" th:text="*{item.username}"></option>
                     </select>
-                    <label for="userID">所属用户</label>
+                    <label for="userID" th:if="${loginUser.roleID==adminRoleID}">所属用户</label>
                 </div>
 
                 <div class="input-field col s12 m12 l12">
@@ -130,8 +136,7 @@
                               th:text="${machine.remark}"></textarea>
                     <label for="remark">备注</label>
                 </div>
-            </div>
-            <div class="row">
+
                 <div class="input-field col s6 m6 l6 right-align">
                     <button type="reset" class="waves-effect waves-light btn"><i class="material-icons left">clear</i>清空
                     </button>
@@ -145,8 +150,7 @@
     </div>
 </main>
 
-<footer class="page-footer hide-on-med-and-down"
-        style="position: absolute; bottom: 0; left: 0;background-color: #37474f;">
+<footer class="page-footer hide-on-med-and-down blue-grey darken-4" style="z-index: 1;">
     <div class="footer-copyright">
         <div class="container right-align">
             © 2017 Copyright 珠海希梦电子科技有限公司
@@ -170,6 +174,7 @@
             closeOnSelect: true
         });
         $("#userID").material_select();
+        $("#userID-ro").material_select();
         var message = '[[${message}]]';
         if (message !== '') {
             Materialize.toast(message, 5000);
