--- a/src/main/webapp/WEB-INF/templates/role/roleForm.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleForm.html
@@ -13,13 +13,15 @@
 
 <!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+<!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="newEntityID" type="java.lang.Integer"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="role" type="com.xmlan.machine.module.role.entity.Role"*/-->
 <!--/* </editor-fold> */-->
 
 <body>
-<header>
-    <nav style="background-color: #37474f;z-index: 1;">
+<header style="z-index: 1;">
+    <nav class="z-depth-2 blue-grey darken-4">
         <div class="nav-wrapper">
             <ul class="left">
                 <li style="height: 56px;">
@@ -43,10 +45,10 @@
                 <li>
                     <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li class="active" th:if="${loginUser.roleID==1}">
+                <li class="active" th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
@@ -65,22 +67,20 @@
     </nav>
 </header>
 
-<main>
+<main style="z-index: 0;">
+    <div class="page-title z-depth-1 blue-grey darken-2">
+        <div class="white-text">
+            <span class="flow-text">
+                <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
+                   onclick="history.go(-1);"><i class="material-icons white-text">arrow_back</i></a><span
+                    th:text="${role.id==newEntityID?'新增角色':role.name}"></span>
+            </span>
+        </div>
+    </div>
+    <br/>
     <div id="main-content" class="container">
-        <h5 class="title">
-            <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a><span
-                th:text="'&nbsp;|&nbsp;编辑角色——'+${role.id==-2?'新增广告机':role.name}"></span>
-        </h5>
-        <ul>
-            <li class="divider"></li>
-        </ul>
-
         <form th:action="@{${adminPath}+'/role/save/'+${role.id}}" method="post">
-            <!--/* <editor-fold desc="hidden fields"> */-->
-            <input id="id" name="id" type="hidden" th:value="${role.id}" disabled="disabled" class="validate"
-                   required="required"/>
-            <!--/* </editor-fold> */-->
+            <input id="id" name="id" type="hidden" th:value="${role.id}" class="validate" required="required"/>
 
             <div class="row">
                 <div class="input-field col s6 m3 l3">
@@ -89,7 +89,6 @@
                            placeholder="输入角色名" required="required"/>
                     <label for="name">角色名</label>
                 </div>
-
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">insert_comment</i>
                     <textarea id="remark" name="remark" th:text="${role.remark}" class="materialize-textarea"
@@ -114,8 +113,7 @@
     </div>
 </main>
 
-<footer class="page-footer hide-on-med-and-down"
-        style="position: absolute; bottom: 0; left: 0;background-color: #37474f;">
+<footer class="page-footer hide-on-med-and-down blue-grey darken-4" style="z-index: 1;">
     <div class="footer-copyright">
         <div class="container right-align">
             © 2017 Copyright 珠海希梦电子科技有限公司
