--- a/src/main/webapp/WEB-INF/templates/user/userForm.html
+++ b/src/main/webapp/WEB-INF/templates/user/userForm.html
@@ -13,14 +13,16 @@
 
 <!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+<!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="newEntityID" type="java.lang.Integer"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="user" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="roleList" type="java.util.List<com.xmlan.machine.module.role.entity.Role>"*/-->
 <!--/* </editor-fold> */-->
 
 <body>
-<header>
-    <nav style="background-color: #37474f;z-index: 1;">
+<header style="z-index: 1;">
+    <nav class="z-depth-2 blue-grey darken-4">
         <div class="nav-wrapper">
             <ul class="left">
                 <li style="height: 56px;">
@@ -44,10 +46,10 @@
                 <li>
                     <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li class="active" th:if="${loginUser.roleID==1}">
+                <li class="active" th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li th:if="${loginUser.roleID==1}">
+                <li th:if="${loginUser.roleID==adminRoleID}">
                     <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
@@ -66,22 +68,21 @@
     </nav>
 </header>
 
-<main>
+<main style="z-index: 0;">
+    <div class="page-title z-depth-1 blue-grey darken-2">
+        <div class="white-text">
+            <span class="flow-text">
+                <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
+                   onclick="history.go(-1);"><i class="material-icons white-text">arrow_back</i></a><span
+                    th:text="${user.id==newEntityID?'新增用户':user.username}"></span>
+            </span>
+        </div>
+    </div>
+    <br/>
     <div id="main-content" class="container">
-        <h5 class="title">
-            <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a><span
-                th:text="'&nbsp;|&nbsp;编辑用户——'+${user.id==-2?'新增用户':user.username}"></span>
-        </h5>
-        <ul>
-            <li class="divider"></li>
-        </ul>
-
         <form th:action="@{${adminPath}+'/user/save/'+${user.id}}" method="post" onsubmit="return save();">
-            <!--/* <editor-fold desc="hidden fields"> */-->
-            <input id="id" name="id" type="hidden" th:value="${user.id}" disabled="disabled" class="validate"
+            <input id="id" name="id" type="hidden" th:value="${user.id}" class="validate"
                    required="required"/>
-            <!--/* </editor-fold> */-->
 
             <div class="row">
                 <div class="input-field col s6 m3 l3">
@@ -93,9 +94,10 @@
                 <div class="input-field col s6 m3 l3">
                     <i class="material-icons prefix">account_circle</i>
                     <th:block th:switch="${user.id}">
-                        <input th:case="-2" id="authname" name="authname" th:value="${user.authname}" type="text"
+                        <input th:case="newEntityID" id="authname" name="authname" th:value="${user.authname}"
+                               type="text"
                                class="text" placeholder="输入登录账号" required="required"/>
-                        <label th:case="-2" for="authname">登录名</label>
+                        <label th:case="newEntityID" for="authname">登录名</label>
                         <input th:case="*" id="authname-ro" name="authname" th:value="${user.authname}" type="text"
                                class="text" readonly="readonly" placeholder="输入登录账号" required="required"/>
                         <label th:case="*" for="authname-ro">登录名</label>
@@ -104,9 +106,9 @@
                 <div class="input-field col s6 m3 l3">
                     <i class="material-icons prefix">lock_outline</i>
                     <th:block th:switch="${user.id}">
-                        <input th:case="-2" id="password" name="password" th:value="${user.password}" type="password"
-                               class="text" placeholder="输入登录密码" required="required"/>
-                        <label th:case="-2" for="password">登录密码</label>
+                        <input th:case="newEntityID" id="password" name="password" th:value="${user.password}"
+                               type="password" class="text" placeholder="输入登录密码" required="required"/>
+                        <label th:case="newEntityID" for="password">登录密码</label>
                         <input th:case="*" id="password-ro" name="password" th:value="${user.password}" type="password"
                                class="text" placeholder="输入登录密码" required="required" readonly="readonly"/>
                         <label th:case="*" for="password-ro">登录密码</label>
@@ -115,9 +117,9 @@
                 <div class="input-field col s6 m3 l3">
                     <i class="material-icons prefix">lock</i>
                     <th:block th:switch="${user.id}">
-                        <input th:case="-2" id="confirmPassword" name="confirmPassword" th:value="${user.password}"
-                               type="password" class="text" placeholder="重新确认密码" required="required"/>
-                        <label th:case="-2" for="confirmPassword">确认密码</label>
+                        <input th:case="newEntityID" id="confirmPassword" name="confirmPassword" required="required"
+                               th:value="${user.password}" type="password" class="text" placeholder="重新确认密码"/>
+                        <label th:case="newEntityID" for="confirmPassword">确认密码</label>
                         <input th:case="*" id="confirmPassword-ro" name="confirmPassword" th:value="${user.password}"
                                type="password" class="text" placeholder="重新确认密码" required="required"
                                readonly="readonly"/>
@@ -140,7 +142,7 @@
                     <i class="material-icons prefix">group</i>
                     <select id="roleID" name="roleID">
                         <option th:each="item:${roleList}" th:value="*{item.id}" th:text="*{item.name}"
-                                th:if="${item.id==user.roleID}" disabled="disabled" selected="selected"></option>
+                                th:if="${item.id==user.roleID}" selected="selected"></option>
                         <option th:each="item:${roleList}" th:value="*{item.id}"
                                 th:text="*{item.name}"></option>
                     </select>
@@ -178,8 +180,7 @@
     </div>
 </main>
 
-<footer class="page-footer hide-on-med-and-down"
-        style="position: absolute; bottom: 0; left: 0;background-color: #37474f;">
+<footer class="page-footer hide-on-med-and-down blue-grey darken-4" style="z-index: 1;">
     <div class="footer-copyright">
         <div class="container right-align">
             © 2017 Copyright 珠海希梦电子科技有限公司
