--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
@@ -260,7 +260,7 @@
             <p id="detail-item-remark">remark</p>
         </div>
         <div class="modal-footer">
-            <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
+            <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat" onclick="pauseVideo()">关闭</a>
         </div>
     </div>
 
@@ -341,6 +341,7 @@
 
     function detail(id) {
         var url = '[[${adminPath}]]' + "/advertisement/detail/" + id;
+        var request_url = '[[${adminPath}]]' + "/advertisement/video/" + id;
         $.ajax({
             url: url,
             type: "GET",
@@ -350,7 +351,19 @@
                 $("#detail-item-machine-id").text(data['machine']);
                 $("#detail-item-time").text(data['ad'].time);
                 $("#detail-item-add-time").text(data['ad'].addTime);
-                $("#detail-item-media").html();
+                if (data['ad'].url !== null && data['ad'].url.indexOf("images") !== -1) {
+                    $("#detail-item-media").html(
+                        '<img id="ad-image" class="materialboxed" width="450" src="' + data['ad'].url + '"/>'
+                    );
+                } else if (data['ad'].url !== null && data['ad'].url.indexOf("videos") !== -1) {
+                    $("#detail-item-media").html(
+                        '<video id="ad-video" width="100%" height="100%" controls="controls">' +
+                        '    <source src="' + request_url + '" type="video/mp4"/>' +
+                        '</video>'
+                    );
+                } else {
+                    $("#detail-item-media").text('暂无广告图片/视频');
+                }
                 $("#detail-item-remark").text(data['ad'].remark);
             },
             error: function () {
@@ -381,6 +394,13 @@
     function prepareForDeleting(id, name) {
         $("#delete-confirm-id").val(id);
         $("#delete-name").text(name);
+    }
+
+    function pauseVideo() {
+        var video = $("#ad-video");
+        if (video) {
+            video.get(0).pause();
+        }
     }
 </script>
 </body>
