--- a/src/main/webapp/WEB-INF/templates/role/roleList.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleList.html
@@ -110,10 +110,10 @@
         <table class="highlight responsive-table">
             <thead>
             <tr>
-                <th width="20%">角色名</th>
-                <th width="10%">用户数</th>
+                <th>角色名</th>
+                <th>用户数</th>
                 <th>备注</th>
-                <th width="15%" class="hide-on-med-and-down"></th>
+                <th class="hide-on-med-and-down"></th>
                 <th class="hide-on-large-only"></th>
             </tr>
             </thead>
