--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineList.html
@@ -120,17 +120,17 @@
         <table class="highlight responsive-table">
             <thead>
             <tr>
-                <th width="20%">名称</th>
+                <th>名称</th>
                 <th>地址</th>
-                <th width="15%">加入时间</th>
-                <th width="15%">机器识别码</th>
-                <th width="10%">广告数</th>
+                <th>加入时间</th>
+                <th>机器识别码</th>
+                <th>广告数</th>
                 <th class="hide-on-med-and-down"></th>
                 <th class="hide-on-large-only"></th>
             </tr>
             </thead>
             <tbody class="card">
-            <tr th:each="item:${page.list}">
+            <tr th:each="item:${page.list}" th:onclick="'javascript:detail(\''+*{item.id}+'\')'">
                 <td th:text="*{item.name}">name</td>
                 <td th:text="*{#strings.abbreviate(item.address,30)}">address</td>
                 <td th:text="*{#strings.substring(item.addTime,0,10)}">addTime</td>
@@ -138,7 +138,7 @@
                 <th:block th:each="count:${adCount}">
                     <td th:if="${item.id==count.id}" th:text="${count.count}"></td>
                 </th:block>
-                <td width="15%" class="right-align hide-on-med-and-down">
+                <td class="right-align hide-on-med-and-down">
                     <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
                        data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal"
                        th:onmouseover="'javascript:detail(\''+*{item.id}+'\')'">
@@ -277,13 +277,13 @@
             url: url,
             type: "GET",
             success: function (data) {
-                $("#detail-item-id").text(data.machine.id);
-                $("#detail-item-name").text(data.machine.name);
-                $("#detail-item-add-time").text(data.machine.addTime.substr(0, 10));
-                $("#detail-item-user-id").text(data.owner);
-                $("#detail-item-code-number").text(data.machine.codeNumber);
-                $("#detail-item-address").text(data.machine.address);
-                $("#detail-item-remark").text(data.machine.remark);
+                $("#detail-item-id").text(data['machine'].id);
+                $("#detail-item-name").text(data['machine'].name);
+                $("#detail-item-add-time").text(data['machine'].addTime);
+                $("#detail-item-user-id").text(data['owner']);
+                $("#detail-item-code-number").text(data['machine'].codeNumber);
+                $("#detail-item-address").text(data['machine'].address);
+                $("#detail-item-remark").text(data['machine'].remark);
             },
             error: function () {
             }
