--- a/src/main/webapp/WEB-INF/templates/user/userList.html
+++ b/src/main/webapp/WEB-INF/templates/user/userList.html
@@ -134,12 +134,12 @@
         <table id="table-main-content" class="highlight responsive-table">
             <thead>
             <tr>
-                <th width="10%">用户名</th>
-                <th width="10%">登录名</th>
-                <th width="12%">联系方式</th>
-                <th width="10%">角色</th>
+                <th>用户名</th>
+                <th>登录名</th>
+                <th>联系方式</th>
+                <th>角色</th>
                 <th>地址</th>
-                <th width="20%" class="hide-on-med-and-down"></th>
+                <th class="hide-on-med-and-down"></th>
                 <th class="hide-on-large-only"></th>
             </tr>
             </thead>
