--- a/src/main/webapp/WEB-INF/templates/user/userList.html
+++ b/src/main/webapp/WEB-INF/templates/user/userList.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../../../static/application/css/global.css"/>
     <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
-    <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
+    <link rel="shoutcut icon" type="image/x-icon" href="/favicon.ico" media="all"/>
     <title>用户 - 广告机管理后台</title>
 </head>
 
@@ -16,6 +16,7 @@
 <!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.user.entity.User>"*/-->
+<!--/*@thymesVar id="machineCount" type="java.util.List<com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachineCount>"*/-->
 <!--/*@thymesVar id="roleList" type="java.util.List<com.xmlan.machine.module.role.entity.Role>"*/-->
 <!--/*@thymesVar id="username" type="java.lang.String"*/-->
 <!--/*@thymesVar id="authname" type="java.lang.String"*/-->
@@ -138,6 +139,7 @@
                 <th>登录名</th>
                 <th>联系方式</th>
                 <th>角色</th>
+                <th>广告机数</th>
                 <th>地址</th>
                 <th class="hide-on-med-and-down"></th>
                 <th class="hide-on-large-only"></th>
@@ -150,6 +152,9 @@
                 <td th:text="*{item.phone}">phone</td>
                 <th:block th:each="role:${roleList}">
                     <td th:if="${item.roleID==role.id}" th:text="*{role.name}"></td>
+                </th:block>
+                <th:block th:each="count:${machineCount}">
+                    <td th:if="${item.id==count.id}" th:text="*{count.count}"></td>
                 </th:block>
                 <td th:text="*{item.address}">address</td>
                 <td class="right-align hide-on-med-and-down">
