--- a/src/main/webapp/WEB-INF/templates/errorPage/500.html
+++ b/src/main/webapp/WEB-INF/templates/errorPage/500.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../../static/materialize/css/materialize.min.css"/>
-    <link rel="stylesheet" href="../../static/application/css/global.css"/>
+    <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
+    <link rel="stylesheet" href="../../../static/application/css/global.css"/>
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
     <title>系统繁忙</title>
 </head>
@@ -23,7 +23,7 @@
     <div class="col s12 m4 l4 offset-m4 offset-l4">
         <div class="card  hoverable">
             <div class="card-image" style="background-color: #29353d;">
-                <img src="../../static/application/image/500.png" class="center-block"
+                <img src="../../../static/application/image/500.png" class="center-block"
                      style="width: 300px; height: 300px;">
                 <span class="card-title">系统繁忙</span>
             </div>
@@ -39,8 +39,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="../../static/application/js/jquery.min.js"></script>
-<script type="text/javascript" src="../../static/materialize/js/materialize.min.js"></script>
+<script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
 <script type="text/javascript">
     $(document.body).css({
         "overflow-x": "hidden",
