--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
@@ -202,7 +202,7 @@
         </table>
 
         <div id="fixed-add-btn" class="fixed-action-btn">
-            <a class="btn-floating btn-large waves-effect waves-light blue"
+            <a class="btn-floating btn-large waves-effect waves-light blue" onclick="return hasMachine()"
                th:href="@{${adminPath}+'/advertisement/form'}">
                 <i class="large material-icons">add</i>
             </a>
@@ -401,6 +401,24 @@
         if (video) {
             video.get(0).pause();
         }
+    }
+
+    function hasMachine() {
+        var url = '[[${adminPath}]]' + "/advertisement/count";
+        $.ajax({
+            url: url,
+            type: "GET",
+            success: function (count) {
+                if (count === 0) {
+                    Materialize.toast("没有可用的广告机", 5000);
+                    return false;
+                } else {
+                    return true;
+                }
+            },
+            error: function () {
+            }
+        })
     }
 </script>
 </body>
